k8s/fastapi-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: churn-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: evan4110/churnpredapp:1.0
        ports:
        - containerPort: 8000
          name: web
