k8s/redis-services.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: churn-stack
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
